--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ select {
 
 .employee-form .form-field--action button {
   width: auto;
-  min-width: 210px;
+  min-width: 150px;
   justify-self: start;
 }
 button {
@@ -675,6 +675,35 @@ select.shift-select {
   max-width: 100%;
 }
 
+.employee-edit-form__full-row {
+  grid-column: 1 / -1;
+}
+
+.employee-edit-form__full-row select {
+  width: 100%;
+}
+
+.employee-edit-checkboxes {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 0.45rem 1rem;
+  align-items: start;
+}
+
+.employee-edit-checkbox-item {
+  width: 100%;
+  align-items: flex-start;
+  font-size: 0.85rem;
+}
+
+.employee-edit-checkbox-item input[type="checkbox"] {
+  margin-top: 0.2rem;
+}
+
+.employee-edit-checkbox-item--sirv {
+  grid-column: 1 / -1;
+}
+
 .employee-edit-form .modal-actions {
   grid-column: 1 / -1;
   display: flex;
@@ -696,6 +725,10 @@ select.shift-select {
   }
 
   .employee-edit-form {
+    grid-template-columns: 1fr;
+  }
+
+  .employee-edit-checkboxes {
     grid-template-columns: 1fr;
   }
 }
